[package]
name = "coderadio-rust-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures = "0.3"
serde = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking"]}
rodio = {version = "0.16", default-features = false, features = ["vorbis", "minimp3"]}

[dev-dependencies]
mini-redis = "0.4"
bytes = "1"

[patch.crates-io]
rodio = { path = "./patches/rodio" }

